--- a/app/html/components/_header.html
+++ b/app/html/components/_header.html
@@ -1,3 +1,159 @@
 <header class="header">
-  
+  <div class="container">
+    <div class="header__top header-top">
+      <div class="header-top__info">
+
+        <div class="header-top__logo-box logo-box" href="#">
+          <a class="logo-box__logo" href="#body">
+            <img class="logo-box__img" src="images/logo/logo.svg" alt="логотип клиники">
+          </a>
+
+          <div class="logo-box__text">
+            Стоматологическая клиника
+          </div>
+        </div>
+
+        <address class="header-top__address">
+          <ul class="header-top__inner">
+            <li class="header-top__item header-top__item--map">
+              <div class="header-top__address-title header-top__address-title--gis">
+                Адрес
+              </div>
+              <p class="header-top__address-text">
+                г. Коломна, ул. Октябрьской революции д. 161
+              </p>
+            </li>
+
+            <li class="header-top__item header-top__item--time">
+              <div class="header-top__address-title header-top__address-title--clock">
+                Время работы
+              </div>
+              <p class="header-top__address-text">
+                Работаем без выходных с 9:00 до 21:00
+              </p>
+            </li>
+          </ul>
+        </address>
+      </div>
+
+      <div class="header-top__link">
+        <ul class="header-top__social social">
+          <li class="social__item">
+            <a class="social__link" href="#">
+              <img class="social__img" src="images/social/telegram.svg" alt="сылка на тлеграм">
+            </a>
+          </li>
+
+          <li class="social__item">
+            <a class="social__link" href="#">
+              <img class="social__img" src="images/social/whatsapp.svg" alt="сылка на ватсап">
+            </a>
+          </li>
+        </ul>
+
+        <div class="header-top__phone">
+          <ul class="header-top__phone-inner">
+            <li class="header-top__phone-item">
+              <a class="header-top__phone-number" href="tel:+74966141515">
+                +7 (496) 614-15-15
+              </a>
+            </li>
+
+            <li class="header-top__phone-item">
+              <a class="header-top__phone-number" href="tel:+79260255767">
+                +7 (926) 025-57-67
+              </a>
+            </li>
+          </ul>
+          <a class="header-top__phone-link" href="#">Перезвоните мне</a>
+        </div>
+
+        <button class="burger" type="button">
+          <span class="burger__line"></span>
+          <span class="sr-only">Мобильное меню</span>
+        </button>
+
+
+      </div>
+    </div>
+  </div>
+
+  <nav class="header__menu menu">
+    <div class="container">
+      <ul class="menu__list">
+        <li class="menu__item">
+          <a class="menu__link" href="#">
+            Главная
+          </a>
+        </li>
+
+        <li class="menu__item">
+          <a class="menu__link" href="#">
+            Акции
+          </a>
+        </li>
+
+        <li class="menu__item">
+          <a class="menu__link" href="#">
+            Услуги
+          </a>
+        </li>
+
+        <li class="menu__item">
+          <a class="menu__link" href="#">
+            Врачи
+          </a>
+        </li>
+
+        <li class="menu__item">
+          <a class="menu__link" href="#">
+            Отзывы
+          </a>
+        </li>
+
+        <li class="menu__item">
+          <a class="menu__link" href="#">
+            Лицензии
+          </a>
+        </li>
+
+        <li class="menu__item">
+          <a class="menu__link" href="#">
+            О клинике
+          </a>
+        </li>
+
+        <li class="menu__item">
+          <a class="menu__link" href="#">
+            Контакты
+          </a>
+        </li>
+      </ul>
+    </div>
+
+    <button class="menu__cross" type="button"></button>
+  </nav>
+
+  <div class="header-container" style="background-image: url('images/bg/header-bg.jpg')">
+    <div class="container">
+      <h1 class="header-container__title">
+        Лечение и протезирование зубов по Европейским стандартам
+      </h1>
+
+      <div class="header-container__subtitle">
+        Предоставим 2-3 плана качественного лечения под ваш бюджет
+      </div>
+
+      <div class="header-container__box">
+        <p class="header-container__text">
+          Запишитесь на <span>бесплатную</span>  первичную консультацию - диагностику зубов
+        </p>
+
+        <button class="header-container__button button">
+          Записаться
+        </button>
+      </div>
+
+    </div>
+  </div>
 </header>
