--- a/app/scss/common/fonts.scss
+++ b/app/scss/common/fonts.scss
@@ -1,1 +1,17 @@
-@include font-face(OpenSans, OpenSansRegular, 400);
+@include font-face(Gilroy, Gilroy-ExtraBold, 900);
+
+@include font-face(Gilroy, Gilroy-Bold, 700);
+
+@include font-face(Gilroy, Gilroy-SemiBold, 600);
+
+@include font-face(Gilroy, Gilroy-Medium, 500);
+
+@include font-face(Gilroy, Gilroy-Regular, 400);
+
+
+
+@include font-face(Roboto, Roboto-Medium, 500);
+
+@include font-face(Roboto, Roboto-Regular, 400);
+
+
