--- a/app/scss/common/vars.scss
+++ b/app/scss/common/vars.scss
@@ -1,8 +1,11 @@
 //----------colors---------------//
-
-
-
-
+$white: #ffff;
+$dark : #474551;
+$blue-900: #09845B;
+$blue-700: #3A9B7B;
+$blue-500: #1ED499;
+$blue-300: #58EBBB;
+$blue-100: #aef3dc;
 //-------------------------//
 
 %bg {
@@ -28,6 +31,11 @@
     -webkit-box-orient: vertical;
   }
 }
+
+// .class {
+//   font-size: 14px;
+//   @include line-clamp(3);
+// }
 
 //-------------------------//
 $md1:1200;
@@ -65,18 +73,15 @@ $md4:576;
   @font-face {
     font-family: "#{$font-family}";
     src: url('../fonts/#{$url}.woff2') format("woff2"),
-         url('../fonts/#{$url}.woff') format("woff");
+    url('../fonts/#{$url}.woff') format("woff");
     font-weight: #{$weight};
     font-display: swap;
     font-style: normal;
   }
 }
 
-// Использование миксина 
-// Используем в файле, где подключаем шрифты (_fonts.scss)
-// Внимательно проверяем название файла в папке, это наш второй параметр - $url
+//-------------------------//
 
-@include font-face(OpenSans, OpenSansRegular, 400);
-@include font-face(OpenSans, OpenSansBold, 700);
+
 
 //-------------------------//
