--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -6,18 +6,21 @@
 @import 'common/global';
 
 //Подключение компонентов
-
-
+@import 'components/social';
+@import 'components/burger';
 
 //Подключение секций//************************
 
 //header
-@import 'header';
+@import 'header';  
 
 //main
-
+@import 'section/privelege';
+@import 'section/free-inspection';
+@import 'section/stock';
+@import 'section/services';
 
 
 
 //footer
-@import 'footer';
+// @import 'footer';
