--- a/app/html/components/_footer.html
+++ b/app/html/components/_footer.html
@@ -1,3 +1,69 @@
 <footer class="footer">
-  
+  <div class="footer__container container">
+    <div class="footer__logo-box logo-box" href="#">
+      <a class="logo-box__logo" href="#body">
+        <img class="logo-box__img" src="images/logo/logo.svg" alt="логотип клиники">
+      </a>
+
+      <div class="logo-box__text">
+        Стоматологическая клиника
+      </div>
+    </div>
+
+    <nav class="footer__menu menu">
+        <ul class="menu__list">
+          <li class="menu__item">
+            <a class="menu__link" href="#">
+              Главная
+            </a>
+          </li>
+
+          <li class="menu__item">
+            <a class="menu__link" href="#">
+              Акции
+            </a>
+          </li>
+
+          <li class="menu__item">
+            <a class="menu__link" href="#">
+              Услуги
+            </a>
+          </li>
+
+          <li class="menu__item">
+            <a class="menu__link" href="#">
+              Врачи
+            </a>
+          </li>
+
+          <li class="menu__item">
+            <a class="menu__link" href="#">
+              Отзывы
+            </a>
+          </li>
+
+          <li class="menu__item">
+            <a class="menu__link" href="#">
+              Лицензии
+            </a>
+          </li>
+
+          <li class="menu__item">
+            <a class="menu__link" href="#">
+              О клинике
+            </a>
+          </li>
+
+          <li class="menu__item">
+            <a class="menu__link" href="#">
+              Контакты
+            </a>
+          </li>
+        </ul>
+    
+
+      <button class="menu__cross" type="button"></button>
+    </nav>
+  </div>
+
 </footer>
