--- a/app/html/components/_services.html
+++ b/app/html/components/_services.html
@@ -385,14 +385,16 @@
             <span>в 4 этапа</span>
           </h3>
 
-          <p class="technology__video-text">
-            Посмотрите видео о технологии
-          </p>
+          <div class="technology__video">
+            <p class="technology__video-text">
+              Посмотрите видео о технологии
+            </p>
 
-          <a class="technology__video-link" data-fancybox href="#"
-            style="background-image: url('images/services/technology-bg.jpg')">
-            <span class="sr-only">видео о технологии</span>
-          </a>
+            <a class="technology__video-link" data-fancybox href="#"
+              style="background-image: url('images/services/technology-bg.jpg')">
+              <span class="sr-only">видео о технологии</span>
+            </a>
+          </div>
 
           <button class="technology__button button button--transparent" type="button">
             Узнать цены
@@ -449,20 +451,20 @@
 
           <li class="technology__step-item">
             <span class="technology__step-num">2</span>
-            <p class="technology__step-text">Ультразвуковым аппаратом производится максимальная чистка в труднодоступных
-              местах от поддесневого и наддесневого камня и налета.</p>
+            <p class="technology__step-text">Применение AIR FLOW не доставляет дискомфорта и боли, очищая межзубные
+              отложения.</p>
           </li>
 
           <li class="technology__step-item">
             <span class="technology__step-num">3</span>
-            <p class="technology__step-text">Ультразвуковым аппаратом производится максимальная чистка в труднодоступных
-              местах от поддесневого и наддесневого камня и налета.</p>
+            <p class="technology__step-text">Полировка зубов при помощи специальных паст и щеточек. Такая чистка
+              устраняет все неровности скопившихся отложений, освежает и убирает неприятный запах.</p>
           </li>
 
           <li class="technology__step-item">
             <span class="technology__step-num">4</span>
-            <p class="technology__step-text">Ультразвуковым аппаратом производится максимальная чистка в труднодоступных
-              местах от поддесневого и наддесневого камня и налета.</p>
+            <p class="technology__step-text">Покрытие зубов ременилизирующим гелем. Снимает чувствительность,
+              предотвращает развитие кариеса. </p>
           </li>
         </ul>
 
@@ -487,11 +489,11 @@
         </div>
 
         <div class="technology__buttons">
-          <button class="technology__button button button--transparent" type="button">
+          <button class="technology__bottom-button button button--transparent" type="button">
             Записаться
           </button>
 
-          <button class="technology__button button" type="button">
+          <button class="technology__bottom-button button" type="button">
             Выбрать врача
           </button>
         </div>
