--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -19,8 +19,15 @@
 @import 'section/free-inspection';
 @import 'section/stock';
 @import 'section/services';
+@import 'section/doctors';
+@import 'section/assistant';
+@import 'section/reviews';
+@import 'section/documentation';
+@import 'section/about';
+@import 'section/registration';
+@import 'section/contacts';
 
 
 
 //footer
-// @import 'footer';
+@import 'footer';
