--- a/app/html/components/_stock.html
+++ b/app/html/components/_stock.html
@@ -10,13 +10,13 @@
     </h3>
 
     <div class="stock__inner-wrapper">
-      <button class="slide-arow slide-arow--prew" type="button">
+      <button class="stock-btn__prew slide-arow slide-arow--prew" type="button">
         <span class="sr-only">
           кнопка переключения на предыдущий слайд
         </span>
       </button>
 
-      <button class="slide-arow slide-arow--next" type="button">
+      <button class="stock-btn__next slide-arow slide-arow--next" type="button">
         <span class="sr-only">
           кнопка переключения на предыдущий слайд
         </span>
