--- a/app/scss/section/services.scss
+++ b/app/scss/section/services.scss
@@ -37,7 +37,7 @@
     }
 
     @include media-4 {
-      min-height: 740px
+      // min-height: 740px
     }
   }
 
@@ -87,6 +87,7 @@
 
     @include media-4 {
       margin-bottom: 40px;
+      font-size: 14px;
     }
 
   }
@@ -118,6 +119,10 @@
       height: 7px;
       border-radius: 50%;
       background-color: $dark;
+    }
+
+    @include media-3 {
+      font-size: 16px;
     }
   }
 
@@ -169,16 +174,36 @@
   border-radius: 20px;
   overflow: hidden;
 
+  .social {
+    min-width: 66px;
+  }
+
 
   // .technology__top
   &__top {
+    position: relative;
     display: flex;
     justify-content: space-between;
     padding: 60px 80px 25px;
+
+    @include media-1 {
+      flex-direction: column;
+      align-items: center;
+      padding-bottom: 190px;
+    }
+
+    @include media-3 {
+      padding: 30px 0 100px;
+    }
+
   }
 
   // .technology__info
-  &__info {}
+  &__info {
+    // margin-right: 10px;
+
+
+  }
 
   // .technology__title
   &__title {
@@ -186,9 +211,29 @@
     font-size: 28px;
     color: $blue-700;
 
+    @include media-3 {
+      margin-bottom: 30px;
+      text-align: center;
+      padding: 0 21px;
+    }
+
+    @include media-4 {
+      font-size: 20px;
+    }
+
     span {
       font-weight: 900;
       color: $blue-900;
+    }
+  }
+
+  &__video {
+    @include media-1 {
+      // display: block;
+      max-width: 550px;
+      // width: 100%;
+      margin: 0 auto 30px;
+      // margin-left: 50px;
     }
   }
 
@@ -198,6 +243,10 @@
     color: $blue-700;
     font-weight: 400;
     line-height: 1.2;
+
+    @include media-4 {
+      font-size: 14px;
+    }
   }
 
   // .technology__video-link
@@ -216,6 +265,10 @@
     transition: box-shadow 0.3s,
       transform 0.3s;
 
+    @include media-4 {
+      height: 155px;
+    }
+
     &::after {
       content: "";
       width: 100%;
@@ -230,32 +283,66 @@
       width: 110px;
       height: 110px;
       transition: transform 0.3s;
+
+      @include media-4 {
+        transform: scale(0.5) // width: 50px;
+          // height: 50px;
+      }
     }
 
     &:hover {
       box-shadow: inset 0 0 0 100vh rgba(0, 0, 0, 0.6);
 
       &:before {
-        transform: scale(1.2)
+        transform: scale(0.7)
       }
     }
 
   }
 
   // .technology__button
-  &__button {}
+  &__button {
+    @include media-1 {
+      position: absolute;
+      bottom: 77px;
+      // display: flex;
+      // align-self: end;
+
+      left: 50%;
+      transform: translateX(-50%);
+      width: 190px;
+      // padding: 0;
+      padding: 7px 0;
+    }
+
+    @include media-3 {
+      bottom: 17px;
+    }
+  }
 
   // .technology__top-inner
   &__top-inner {
     font-size: 22px;
     font-weight: 500;
+
+    @include media-3 {
+      font-size: 20px;
+      padding: 0 15px;
+    }
+
+    @include media-4 {
+      font-size: 14px;
+    }
   }
 
   // .technology__top-item
   &__top-item {
     position: relative;
     padding-left: 20px;
-    margin-bottom: 15px;
+
+    &:not(:last-child) {
+      margin-bottom: 15px;
+    }
 
     &::before {
       content: '';
@@ -272,14 +359,36 @@
 
   // .technology__bottom
   &__bottom {
-    padding: 60px 30px 77px 80px;
+    padding: 60px 110px 77px 80px;
     box-shadow: inset 0 0 0 100vh rgba(255, 255, 255, 0.4);
     @extend%bg;
+
+    @include media-1 {
+      padding: 30px 108px 13px;
+    }
+
+    // @include media-3 {
+    //   padding: 60px 30px 30px;
+    // }
+
+    @include media-2 {
+      padding: 30px 10px 30px;
+    }
+
+    @include media-4 {
+      padding: 30px 3px 30px;
+    }
   }
 
   // .technology__step-inner
   &__step-inner {
+    position: relative;
     margin-bottom: 60px;
+
+    @include media-3 {
+      margin-bottom: 30px;
+      font-size: 14px;
+    }
   }
 
   // .technology__step-item
@@ -291,21 +400,49 @@
     padding: 10px 10px 10px 20px;
     background-color: $blue-300;
     border-radius: 20px;
+    height: 120px;
+
+    @include media-1 {
+      margin: 0 auto;
+    }
 
     &:not(:last-child) {
       margin-bottom: 30px;
+
+      @include media-1 {
+        margin-bottom: 10px;
+      }
+    }
+
+    @include media-4 {
+      padding: 10px 10px 10px 10px;
+      // padding-left: 10px;
+      // height: 110px;
+      min-height: 100px;
+      height: 100%;
     }
 
     &:nth-child(2) {
-      transform: translateX(15%);
+      margin-left: auto;
+      margin-right: 20%;
+
+      @include media-1 {
+        margin: 0 auto 10px;
+      }
+
     }
 
     &:nth-child(3) {
-      transform: translateX(30%);
+      margin-left: auto;
+      margin-right: 10%;
+
+      @include media-1 {
+        margin: 0 auto 10px;
+      }
     }
 
     &:nth-child(4) {
-      transform: translateX(45%);
+      margin-left: auto;
     }
   }
 
@@ -314,10 +451,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 8px 40px 3px 33px;
-
-    min-width: 107px;
-
+    padding-right: 10px;
+    max-width: 100px;
+    width: 100%;
+    height: 100px;
     margin-right: 30px;
     background-color: $white;
     border-radius: 50%;
@@ -325,14 +462,42 @@
     font-weight: 700;
     font-size: 68px;
     color: $blue-900;
+
+    @include media-4 {
+
+      max-width: 50px;
+      height: 50px;
+
+
+      // min-width: 43px;
+      margin-right: 10px;
+      padding: 0;
+      padding-right: 5px;
+      font-size: 30px;
+    }
   }
 
   // .technology__step-text
-  &__step-text {}
+  &__step-text {
+    align-self: start;
+    padding-top: 8px;
+
+    @include media-4 {
+      padding-top: 0;
+    }
+  }
 
   // .technology__social-wrapper
   &__social-wrapper {
     margin-bottom: 30px;
+
+    @include media-3 {
+      margin-bottom: 0;
+    }
+
+    @include media-4 {
+      display: none;
+    }
   }
 
   &__buttons {
@@ -342,10 +507,14 @@
     @include media-4 {
       display: block;
     }
+
+    @include media-3 {
+      display: none;
+    }
   }
 
 
-  &__button {
+  &__bottom-button {
     @include media-4 {
       display: block;
       margin: 0 auto;
